--- a/etablissementAngular/src/app/admin/liste-salles/liste-salles.component.html
+++ b/etablissementAngular/src/app/admin/liste-salles/liste-salles.component.html
@@ -9,7 +9,8 @@
 </div>
 
 <h1>Liste des Salles de classe</h1>
-<button class="btn btn-outline-primary" (click)="displayNew()">Ajouter une salle de Classe</button>
+<button [routerLink]="['/salle/edit']"
+      routerLinkActive="active" class="btn btn-outline-primary">Ajouter une salle</button>
 
 <table class="table">
 
