--- a/etablissementAngular/src/app/admin-row/matiere-row/matiere-row.component.html
+++ b/etablissementAngular/src/app/admin-row/matiere-row/matiere-row.component.html
@@ -1,14 +1,13 @@
 
 
 <ng-container>
-    <td>{{ user.id }}</td>
-    <td>{{ user.nom }}</td>
-    <td>{{ user.couleur }}</td>
+    <td>{{ matiere.id }}</td>
+    <td>{{ matiere.nom }}</td>
+    <td>{{ matiere.couleur }}</td>
   
     <td>
-      <button (click)="changeMode()" class="btn btn-outline-primary">
-        editer
-      </button>
+      <button [routerLink]="['/matiere', 'edit', matiere.id]"
+      routerLinkActive="active" class="btn btn-outline-warning">Modifier</button>
     </td>
     <td>
       <button class="btn btn-outline-danger" (click)="delete()">supprimer</button>
