--- a/etablissementAngular/src/app/admin-edit/edit-matiere/edit-matiere.component.html
+++ b/etablissementAngular/src/app/admin-edit/edit-matiere/edit-matiere.component.html
@@ -14,5 +14,6 @@
           Enregistrer
         </button>
       </div>
-    <!--<button (click)="cancel()" class="btn btn-outline-warning">Annuler</button>-->
+      <button [routerLink]="['/listematieres']"
+      routerLinkActive="active" class="btn btn-outline-warning">Abandonner</button>
 </form>
