--- a/etablissementAngular/src/app/admin-edit/edit-salle/edit-salle.component.html
+++ b/etablissementAngular/src/app/admin-edit/edit-salle/edit-salle.component.html
@@ -25,5 +25,6 @@
           Enregistrer
         </button>
       </div>
-    <!--<button (click)="cancel()" class="btn btn-outline-warning">Annuler</button>-->
+      <button [routerLink]="['/listesalles']"
+      routerLinkActive="active" class="btn btn-outline-warning">Abandonner</button>
 </form>
