--- a/etablissementAngular/src/app/admin-row/groupe-classe-row/groupe-classe-row.component.html
+++ b/etablissementAngular/src/app/admin-row/groupe-classe-row/groupe-classe-row.component.html
@@ -1,14 +1,13 @@
 
 
 <ng-container>
-    <td>{{ user.id }}</td>
-    <td>{{ user.nom }}</td>
-    <td>{{ user.professeurPrincipal.nom }}</td>
+    <td>{{ salle.id }}</td>
+    <td>{{ salle.nom }}</td>
+    <td>{{ salle.professeurPrincipal.nom }}</td>
   
     <td>
-      <button (click)="changeMode()" class="btn btn-outline-primary">
-        editer
-      </button>
+      <button [routerLink]="['/classe', 'edit', salle.id]"
+      routerLinkActive="active" class="btn btn-outline-warning">Modifier</button>
     </td>
     <td>
       <button class="btn btn-outline-danger" (click)="delete()">supprimer</button>
