--- a/etablissementAngular/src/app/admin/planning-admin/planning-admin.component.html
+++ b/etablissementAngular/src/app/admin/planning-admin/planning-admin.component.html
@@ -1,2 +1,15 @@
 
-<app-planning [cours]="listeCours"></app-planning>
+
+    <h4>Filtrer par professeur</h4>
+    <select [(ngModel)]="profID">
+      <option [value]=0>Tous</option>
+      <option *ngFor="let prof of listeProfs" [value]="prof.id">{{prof.prenom}} {{prof.nom}}</option>
+    </select>
+
+    <h4>Filtrer par salle</h4>
+    <select [(ngModel)]="salleID">
+      <option [value]=0>Toutes</option>
+      <option *ngFor="let salle of listeSalles" [value]="salle.id">{{salle.nom}}</option>
+    </select>
+
+  <app-planning [cours]="listeCours | profPipe: profID | sallePipe: salleID"></app-planning>
