--- a/etablissementAngular/src/app/admin/liste-classes/liste-classes.component.html
+++ b/etablissementAngular/src/app/admin/liste-classes/liste-classes.component.html
@@ -22,7 +22,7 @@
   </tr>
   <tr
   groupe-classe-row
-    [salle]="c"
+    [classe]="c"
     *ngFor="let c of classes"
     (delete)="delete($event)"
   ></tr>
