Ajout lien planning

--- a/etablissementAngular/src/app/admin/home-admin/home-admin.component.html
+++ b/etablissementAngular/src/app/admin/home-admin/home-admin.component.html
@@ -5,6 +5,7 @@
     <a  [routerLink]="['/listeclasses']" routerLinkActive="active" class="btn btn-light">Liste des classes  </a>
     <a  [routerLink]="['/listematieres']" routerLinkActive="active" class="btn btn-light">Liste des matières  </a>
     <a  [routerLink]="['/listesalles']" routerLinkActive="active" class="btn btn-light">Liste des salles  </a>
+    <a  [routerLink]="['/planning-admin']" routerLinkActive="active" class="btn btn-light">Planning  </a>
 
 </div>
 
