--- a/etablissementAngular/src/app/admin-edit/edit-classe/edit-classe.component.html
+++ b/etablissementAngular/src/app/admin-edit/edit-classe/edit-classe.component.html
@@ -1,9 +1,11 @@
 <form (ngSubmit)="send()" [formGroup]="form">
     <div class="form-group">
+      <label for="nom">Nom</label>
       <input type="text" class="form-control" name="nom" [formControl]="nomCtrl"/>
       <div *ngIf="nomCtrl.dirty && nomCtrl.hasError('required')"  class="alert alert-danger">Le nom est obligatoire</div>
     </div>
     <div class="form-group">
+      <label for="professeur">Professeur</label>
         <select class="form-control" name="professeur" [formControl]="professeurCtrl" (change)="professeurSelect($event)">
           <option [attr.selected]="idProfresseur==0 ? true : null" [value]=-1> Choisir ...</option>
           <option *ngFor="let professeur of professeurs" [value]="professeur.id"
