--- a/etablissementAngular/src/app/admin/liste-matieres/liste-matieres.component.html
+++ b/etablissementAngular/src/app/admin/liste-matieres/liste-matieres.component.html
@@ -6,7 +6,7 @@
     <a  [routerLink]="['/listeclasses']" routerLinkActive="active" class="btn btn-light">Liste des classes  </a>
     <a  [routerLink]="['/listematieres']" routerLinkActive="active" class="btn btn-light">Liste des matières  </a>
     <a  [routerLink]="['/listesalles']" routerLinkActive="active" class="btn btn-light">Liste des salles  </a>
-
+    <a  [routerLink]="['/listescours']" routerLinkActive="active" class="btn btn-outline-light">Liste des cours  </a>
 </div>
 
 <h1>Liste des Matieres</h1>
