--- a/etablissementAngular/src/app/admin-edit/edit-cours/edit-cours.component.html
+++ b/etablissementAngular/src/app/admin-edit/edit-cours/edit-cours.component.html
@@ -1,12 +1,30 @@
 <form (ngSubmit)="send()" [formGroup]="form">
   <div class="form-group">
-    <input type="text" class="form-control" name="nom" [formControl]="nomCtrl"/>
-    <div *ngIf="nomCtrl.dirty && nomCtrl.hasError('required')"  class="alert alert-danger">Le nom est obligatoire</div>
+    <label for="heureDebut">Heure debut</label>
+    <input type="text" class="form-control" name="heureDebut" [formControl]="heureDebutCtrl"/>
+    <div *ngIf="heureDebutCtrl.dirty && heureDebutCtrl.hasError('required')"  class="alert alert-danger">L'heure de début est obligatoire</div>
   </div>
   <div class="form-group">
+    <label for="heureFin">Heure fin</label>
+    <input type="text" class="form-control" name="heureFin" [formControl]="heureFinCtrl"/>
+    <div *ngIf="heureFinCtrl.dirty && heureFinCtrl.hasError('required')"  class="alert alert-danger">L'heure de fin est obligatoire</div>
+  </div>
+  <div class="form-group">
+    <label for="jour">Jour</label>
+    <select class="form-control" name="jour" [formControl]="dayCtrl">
+      <option  [value]=1>Lundi</option>
+      <option  [value]=2>Mardi</option>
+      <option  [value]=3>Mercredi</option>
+      <option  [value]=4>Jeudi</option>
+      <option  [value]=5>Vendredi</option>
+    </select>
+    <div *ngIf="dayCtrl.dirty && dayCtrl.hasError('required')"  class="alert alert-danger">Le jour est obligatoire</div>
+  </div>
+  <div class="form-group">
+    <label for="professeur">Professeur</label>
       <select class="form-control" name="professeur" [formControl]="professeurCtrl" (change)="professeurSelect($event)">
         <option [attr.selected]="idProfresseur==0 ? true : null" [value]=-1> Choisir ...</option>
-        <option *ngFor="let professeur of professeurs" [value]="professeur.id"
+        <option *ngFor="let professeur of professeurs; let index=index" [value]="index"
          [attr.selected]="professeur.id==idProfresseur ? true : null">{{professeur.nom}}
         </option>
       </select>
@@ -14,9 +32,10 @@
       *ngIf="professeurCtrl.dirty && professeurCtrl.hasError('required')"
       class="alert alert-danger">Le professeur est obligatoire
       </div>
+      <label for="professeur">Matiere</label>
       <select class="form-control" name="matiere" [formControl]="matiereCtrl" (change)="matiereSelect($event)">
         <option [attr.selected]="idMatiere==0 ? true : null" [value]=-1> Choisir ...</option>
-        <option *ngFor="let matiere of matieres" [value]="matiere.id"
+        <option *ngFor="let matiere of matieres; let index=index" [value]="index"
          [attr.selected]="matiere.id==idMatiere ? true : null">{{matiere.nom}}
         </option>
       </select>
@@ -24,9 +43,10 @@
       *ngIf="matiereCtrl.dirty && matiereCtrl.hasError('required')"
       class="alert alert-danger">La matière est obligatoire
       </div>
+      <label for="professeur">Classe</label>
       <select class="form-control" name="classe" [formControl]="classeCtrl" (change)="classeSelect($event)">
         <option [attr.selected]="idclasse==0 ? true : null" [value]=-1> Choisir ...</option>
-        <option *ngFor="let classe of classes" [value]="classe.id"
+        <option *ngFor="let classe of classes; let index=index" [value]="index"
          [attr.selected]="classe.id==idclasse ? true : null">{{classe.nom}}
         </option>
       </select>
