--- a/etablissementAngular/src/app/admin-row/cours-row/cours-row/cours-row.component.html
+++ b/etablissementAngular/src/app/admin-row/cours-row/cours-row/cours-row.component.html
@@ -1,10 +1,10 @@
 <ng-container>
-  <td>{{ user.id }}</td>
-  <td>{{ user.heureDebut }}</td>
-  <td>{{ user.heureFin }}</td>
-  <td>{{ user.day }}</td>
-  <td>{{ user.matiere.nom }}</td>
-  <td>{{ user.professeur.nom}} {{ user.professeur.prenom}}</td>
+  <td>{{ cours.id }}</td>
+  <td>{{ cours.heureDebut }}</td>
+  <td>{{ cours.heureFin }}</td>
+  <td>{{ cours.day }}</td>
+  <td>{{ cours.matiere.nom }}</td>
+  <td>{{ cours.professeur.nom}} {{ cours.professeur.prenom}}</td>
   <td>
     <button [routerLink]="['/cours', 'edit', cours.id]"
     routerLinkActive="active" class="btn btn-outline-warning">Modifier</button>
@@ -13,31 +13,3 @@
     <button class="btn btn-outline-danger" (click)="delete()">supprimer</button>
   </td>
 </ng-container>
-  <!--td>
-    <button (click)="changeMode()" class="btn btn-outline-primary">
-      editer
-    </button>
-  </!--td>
-  <td>
-    <button class="btn btn-outline-danger" (click)="delete()">supprimer</button>
-  </td>
-</ng-container>
-
-<ng-template #formEdit>
-  <td>{{ user.id }}</td>
-  <td><input [(ngModel)]="user.heureDebut"></td>
-  <td><input [(ngModel)]="user.heureFin" /></td>
-  <td><input [(ngModel)]="user.day"></td>
-  <td><input [(ngModel)]="user.matiere.nom" /></td>
-  <td><input [(ngModel)]="user.professeur.nom" /></td>
-  <td><input [(ngModel)]="user.professeur.prenom" /></td>
-  <td>
-    <button (click)="save()" class="btn btn-outline-success">
-      enregistrer
-    </button>
-  </td>
-  <td>
-    <button (click)="cancel()" class="btn btn-outline-warning">annuler</button>
-  </td>
-</ng-template>
--->
